[#1964] Apply dark mode styling, fix button hover

--- a/less/v2/activities.less
+++ b/less/v2/activities.less
@@ -124,6 +124,7 @@
     .separator, .max {
       flex: 0;
       padding-inline: 3px;
+      font-weight: bold;
     }
     .separator { color: var(--dnd5e-color-gold); }
   }
