--- a/less/v2/compendium-browser.less
+++ b/less/v2/compendium-browser.less
@@ -242,11 +242,6 @@
       &:not(.invalid) .value { color: var(--dnd5e-color-green); }
       &.invalid .value { color: var(--dnd5e-color-maroon); }
     }
-
-    button:hover {
-      background: var(--dnd5e-background-card);
-      color: var(--color-text-dark-primary);
-    }
   }
 
   &.minimized {
