--- a/less/v2/dark/forms.less
+++ b/less/v2/dark/forms.less
@@ -13,12 +13,12 @@
     &.card { background: var(--dnd5e-background-10); }
   }
 
-  :is(.form-group, fieldset) :is(select, input) {
+  :is(.form-group, fieldset) :is(select, input):not([type="range"]) {
     border: var(--dnd5e-border-gold);
     background: var(--dnd5e-background-parchment);
   }
 
-  :is(input, select):disabled {
+  :is(input, select):not([type="range"]):disabled {
     background: var(--dnd5e-color-dark-gray);
   }
 
